@@ -253,12 +253,14 @@ static grub_err_t
 grub_cmd_ls (grub_extcmd_context_t ctxt, int argc, char **args)
 {
   struct grub_arg_list *state = ctxt->state;
+  int i;
 
   if (argc == 0)
     grub_ls_list_devices (state[0].set);
   else
-    grub_ls_list_files (args[0], state[0].set, state[2].set,
-			state[1].set);
+    for (i = 0; i < argc; i++)
+      grub_ls_list_files (args[i], state[0].set, state[2].set,
+			  state[1].set);
 
   return 0;
 }
